working site, mobile first, images, and content responsive, animation and flex working properly

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <header>
       <nav>
         <ul>
-          <li><a href="#"><img src="" alt="" />dfdsx</a></li>
+          <li><a href="#"><img src="" alt="" />ARCTIC WILD</a></li>
           <li><a href="#">schedule</a></li>
           <li><a href="#">destination</a></li>
           <li><a href="#">activities</a></li>
@@ -20,54 +20,68 @@
           <li><a href="#">contact</a></li>
         </ul>
       </nav>
-      <button type="button" name="button"><a href="#middle">Middle</a></button>
-      <h2></h2>
-      <h1></h1>
+      <div class="title">
+        <img class="alaska" src="img/icon-alaska.png" alt="alaska map" />
+        <h2>ENJOY THE SOLITUDE & SOLACE OF</h2>
+        <h1>ARCTIC WILD</h1>
+      </div>
+
+      <button type="button" name="button"><a href="#middle">Learn More</a></button>
 
     </header>
 
     <div class="container">
       <div class="row1">
-      <div class="trip trip1">
-        <h3></h3>
-        <a href="#">
-        <img src="img/icon-raft.svg" alt="raft" />
-        </a>
-      </div>
-      <div class="trip trip2">
-        <h3></h3>
-        <a href="#">
-        <img src="img/icon-camp.svg" alt="tent" />
-        </a>
-      </div>
-      <div class="trip trip3">
-        <h3></h3>
-        <a href="#">
-        <img src="img/icon-backpacking.svg" alt="boots" />
-        </a>
-      </div>
+        <div class="trip trip1">
+          <h3></h3>
+          <a href="#">
+          <img src="img/icon-raft.svg" alt="raft" />
+          </a>
+        </div>
+        <div class="trip trip2">
+          <h3></h3>
+          <a href="#">
+          <img src="img/icon-camp.svg" alt="tent" />
+          </a>
+        </div>
+        <div class="trip trip3">
+          <h3></h3>
+          <a href="#">
+          <img src="img/icon-backpacking.svg" alt="boots" />
+          </a>
+        </div>
       </div>
 
       <div class="row2" id="middle">
+        <div class="trip trip4">
+          <h3></h3>
+          <a href="#">
+          <img src="img/icon-canoe.svg" alt="canoe" />
+          </a>
+        </div>
+        <div class="trip trip5">
+          <h3></h3>
+          <a href="#">
+           <img src="img/icon-photography.svg" alt="camera" />
+          </a>
+        </div>
+        <div class="trip trip6">
+          <h3></h3>
+          <a href="#">
+          <img src="img/icon-custom.svg" alt="cumpus" />
+          </a>
+        </div>
+      </div>
 
-      <div class="trip trip4">
-        <h3></h3>
-        <a href="#">
-        <img src="img/icon-canoe.svg" alt="canoe" />
-        </a>
-      </div>
-      <div class="trip trip5">
-        <h3></h3>
-        <a href="#">
-         <img src="img/icon-photography.svg" alt="camera" />
-        </a>
-      </div>
-      <div class="trip trip6">
-        <h3></h3>
-        <a href="#">
-        <img src="img/icon-custom.svg" alt="cumpus" />
-        </a>
-      </div>
+      <div class="aw-discription">
+        <h3>COME AND EXPERIANCE THE</h3>
+        <h1>ARCTIC WILD</h1>
+        <hr class="head">
+        <p>Arctic Wild provides professionally guided Alaska adventure tours in Alaska’s vast wilderness. Trust your Alaskan adventure vacation to an experienced<a href="#"> Arctic Wild Guide.</a></p>
+        <p>  Groups are small (1 to 8 people), we travel quietly, and the focus is on the land and its inhabitants. Whether you join us for a base camp trip, river rafting, canoeing or backpacking adventure there is plenty of free time for you to explore, bird watch, photograph, fish or do whatever pleases you most.
+        </p>
+        <button type="button" name="button">Arctic Destination</button>
+        <hr>
       </div>
 
 
