destinations layout with images and flex positioning started

--- a/index.html
+++ b/index.html
@@ -83,9 +83,23 @@
         <button type="button" name="button">Arctic Destination</button>
         <hr>
       </div>
+      <div class="destination">
+        <div class="destination-head">
+          <h3>CHOOSE FROM SIX</h3>
+          <h1>DESTINATIONS</h1>
+          <p>Arctic Wild has the perfect Alaskan Adventure for you. Choose from canoeing in<a href="#"> Gates of the Arctic National Park</a>, or photographing caribou in the<a href="#"> Arctic National Willife Refuge</a>. Experience a backpacking trip in the remote<a href="#"> Western Brooks Range</a>, or try rafting on the<a href="#"> Kongakut River</a>.
+          </p>
+          <img src="img/map.png" alt="map of alaska" />
+        </div>
 
-
-
+        <div class="destination-bg">
+          <img clas="bg-mountains"src="img/bg-destinations.png" alt="background mountains" />
+          <div class="destination-bg-sides">
+            <!-- <img src="img/bg-destinations-left.png" alt="background mountains" />
+            <img src="img/bg-destinations-right.png" alt="background mountains" /> -->
+          </div>
+        </div>
+      </div>
     </div>
   </body>
 </html>
