reworked all media quires making my life better and worse at the same time

--- a/index.html
+++ b/index.html
@@ -51,7 +51,6 @@
           </a>
         </div>
       </div>
-
       <div class="row2" id="middle">
         <div class="trip trip4">
           <h3></h3>
@@ -72,34 +71,50 @@
           </a>
         </div>
       </div>
+    </div>
 
-      <div class="aw-discription">
-        <h3>COME AND EXPERIANCE THE</h3>
-        <h1>ARCTIC WILD</h1>
-        <hr class="head">
-        <p>Arctic Wild provides professionally guided Alaska adventure tours in Alaska’s vast wilderness. Trust your Alaskan adventure vacation to an experienced<a href="#"> Arctic Wild Guide.</a></p>
-        <p>  Groups are small (1 to 8 people), we travel quietly, and the focus is on the land and its inhabitants. Whether you join us for a base camp trip, river rafting, canoeing or backpacking adventure there is plenty of free time for you to explore, bird watch, photograph, fish or do whatever pleases you most.
-        </p>
-        <button type="button" name="button">Arctic Destination</button>
-        <hr>
-      </div>
+    <div class="aw-discription">
+      <h3>COME AND EXPERIANCE THE</h3>
+      <h1>ARCTIC WILD</h1>
+      <hr class="head">
+      <p>Arctic Wild provides professionally guided Alaska adventure tours in Alaska’s vast wilderness. Trust your Alaskan adventure vacation to an experienced<a href="#"> Arctic Wild Guide.</a></p>
+      <p>  Groups are small (1 to 8 people), we travel quietly, and the focus is on the land and its inhabitants. Whether you join us for a base camp trip, river rafting, canoeing or backpacking adventure there is plenty of free time for you to explore, bird watch, photograph, fish or do whatever pleases you most.
+      </p>
+      <button type="button" name="button">Arctic Destination</button>
+      <hr>
+    </div>
+
       <div class="destination">
         <div class="destination-head">
           <h3>CHOOSE FROM SIX</h3>
           <h1>DESTINATIONS</h1>
           <p>Arctic Wild has the perfect Alaskan Adventure for you. Choose from canoeing in<a href="#"> Gates of the Arctic National Park</a>, or photographing caribou in the<a href="#"> Arctic National Willife Refuge</a>. Experience a backpacking trip in the remote<a href="#"> Western Brooks Range</a>, or try rafting on the<a href="#"> Kongakut River</a>.
           </p>
-          <img src="img/map.png" alt="map of alaska" />
+          <img class="map" src="img/map.png" alt="map of alaska" />
         </div>
-
         <div class="destination-bg">
-          <img clas="bg-mountains"src="img/bg-destinations.png" alt="background mountains" />
-          <div class="destination-bg-sides">
-            <!-- <img src="img/bg-destinations-left.png" alt="background mountains" />
-            <img src="img/bg-destinations-right.png" alt="background mountains" /> -->
-          </div>
+          <img src="img/bg-destinations.png" alt="background mountains" />
+        </div>
+        <div class="destination-bg-left">
+          <img src="img/bg-destinations-left.png" alt="background mountains" />
+        </div>
+        <div class="destination-bg-right">
+          <img src="img/bg-destinations-right.png" alt="background mountains" />
         </div>
       </div>
-    </div>
+
+
+        <footer>
+          <div class="stuff">
+            <ul>
+              <li>some</li>
+              <li>more</li>
+              <li>stuff</li>
+            </ul>
+          </div>
+        </footer>
+
+
+
   </body>
 </html>
