fixed media queries, working on animations for buttons in map

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <link href='https://fonts.googleapis.com/css?family=Fjalla+One' rel='stylesheet' type='text/css'>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
 
     <link rel="stylesheet" href="css/styles.css" media="screen" title="no title" charset="utf-8">
     <title>flex-animation</title>
@@ -91,6 +92,13 @@
           <p>Arctic Wild has the perfect Alaskan Adventure for you. Choose from canoeing in<a href="#"> Gates of the Arctic National Park</a>, or photographing caribou in the<a href="#"> Arctic National Willife Refuge</a>. Experience a backpacking trip in the remote<a href="#"> Western Brooks Range</a>, or try rafting on the<a href="#"> Kongakut River</a>.
           </p>
           <img class="map" src="img/map.png" alt="map of alaska" />
+        </div>
+        <div class="dots">
+          <div class="kongakut">
+            <a href="#"><i class="fa fa-circle"></i></a>
+          </div>
+
+
         </div>
         <div class="destination-bg">
           <img src="img/bg-destinations.png" alt="background mountains" />
