some animation at the bottom of the page

--- a/index.html
+++ b/index.html
@@ -96,6 +96,7 @@
         <div class="dots">
           <div class="kongakut">
             <a href="#"><i class="fa fa-circle"></i></a>
+            <img src="img/kongakut.jpg" alt="stram and mountain" />
           </div>
 
 
