updated header layout, button positions, and links hover color

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
 
     <link rel="stylesheet" href="css/styles.css" media="screen" title="no title" charset="utf-8">
-    <title>flex-animation</title>
+    <title>Artic Wild flex-animation</title>
   </head>
   <body>
     <header>
@@ -114,11 +114,11 @@
 
 
         <footer>
-          <div class="stuff">
+          <div class="guides">
             <ul>
-              <li>some</li>
-              <li>more</li>
-              <li>stuff</li>
+              <li>Remote wilderness travel</li>
+              <li>Professional guides</li>
+              <li>Exceptional technical skills</li>
             </ul>
           </div>
         </footer>
